[tool.ruff]
target-version = "py39"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
markdown-table = "2020.12.3"
defusedxml = "0.7.1"
markdown = "3.8"

[tool.poetry.group.dev.dependencies]
prospector = { version = "1.17.1", extras = ["with-bandit", "with-mypy", "with-pyroma", "with-ruff"] }
types-markdown = "3.8.0.20250415"
prospector-profile-utils = "1.23.0"
prospector-profile-duplicated = "1.10.5"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern = "^(?P<base>\\d+(\\.\\d+)*)"
format-jinja = """
{%- if env.get("VERSION_TYPE") == "default_branch" -%}
{{serialize_pep440(bump_version(base, 1), dev=distance)}}
{%- elif env.get("VERSION_TYPE") == "stabilization_branch" -%}
{{serialize_pep440(bump_version(base, 2), dev=distance)}}
{%- elif distance == 0 -%}
{{serialize_pep440(base)}}
{%- else -%}
{{serialize_pep440(bump_version(base), dev=distance)}}
{%- endif -%}
"""

[tool.poetry-plugin-tweak-dependencies-version]
default = "major"

[project]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
]
dynamic = ["dependencies", "version"]
name = "security.md"
description = "Common utilities for Camptocamp CI"
readme = "README.md"
keywords = ["ci"]
license = "FreeBSD"
authors = [{name = "Camptocamp",email = "info@camptocamp.com"}]
packages = [{ include = "security_md" }]
include = [
    "security_md/py.typed",
]
requires-python = ">=3.9"
dependencies = ["markdown-table<2021,>=2020", "defusedxml<1,>=0", "markdown<4,>=3"]

[project.urls]
repository = "https://github.com/camptocamp/c2cciutils"
"Bug Tracker" = "https://github.com/camptocamp/c2cciutils/issues"

[project.scripts]
security-md = "security_md.cli:main"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "poetry-dynamic-versioning[plugin]>=0.19.0",
    "poetry-dynamic-versioning",
]
build-backend = "poetry.core.masonry.api"
